--- a/0x00-Webpack/task_2/css/main.css
+++ b/0x00-Webpack/task_2/css/main.css
@@ -1,11 +1,11 @@
+#count {
+  display: inline;
+  font-weight: bold;
+  margin: 0;
+}
 #logo {
-  width: 200px;
   height: 200px;
+  width: 200px;
   background-image: url("../assets/holberton-logo.jpg");
   background-size: 200px 200px;
-}
-
-#count {
-  font-weight: bold;
-  display: inline;
 }
