--- a/0x01-react_intro/task_2/dashboard/src/Notifications.css
+++ b/0x01-react_intro/task_2/dashboard/src/Notifications.css
@@ -1,4 +1,8 @@
 .Notifications {
-  border: 4px solid rgb(212, 155, 9);
+  border: 3px dashed rgb(212, 155, 9);
   padding: 1rem;
+  position: fixed;
+  top: 0;
+  width: 90%;
+  margin-top: 20px;
 }
